Generate swagger documentation  - Edit godoc comment  - Generate docs.
